Don't make clip view optimizations when the clip view contains Z placeholders.  b=225811  Patch by Robert O'Callahan <roc@ocallahan.org>.  r+sr=dbaron  a=asa